Fix font-color issue on mobile.

--- a/scss/_main/_chrome.scss
+++ b/scss/_main/_chrome.scss
@@ -230,9 +230,10 @@
     input[type="search"] {
       background-color: transparent;
       background-image: url("assets/images/search_light.png");
-      box-shadow: 0 1px 0 rgba(#000, 0.2);
+      color: #fff;
       padding-top: 5px;
       padding-bottom: 5px;
+      box-shadow: 0 1px 0 rgba(#000, 0.2);
       @include transition(width 0.5s);
 
       @include hidpi {
@@ -242,6 +243,7 @@
       @include media($tablet) {
         width: 110px;
         background-image: url("assets/images/search_dark.png");
+        color: $off-black;
         border: 1px solid $off-black;
         box-shadow: 0 1px 0 rgba(#fff, 0.2);
 
